[package]
name = "num"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["num", "number", "float", "int"]
description = "generic number trait"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-num.git"
homepage = "https://github.com/nathanfaucett/rs-num"

[dependencies.abs]
git = "https://github.com/nathanfaucett/rs-abs.git"

[dependencies.approx]
git = "https://github.com/nathanfaucett/rs-approx.git"

[dependencies.bounded]
git = "https://github.com/nathanfaucett/rs-bounded.git"

[dependencies.clamp]
git = "https://github.com/nathanfaucett/rs-clamp.git"

[dependencies.to_degrees]
git = "https://github.com/nathanfaucett/rs-to_degrees.git"

[dependencies.to_radians]
git = "https://github.com/nathanfaucett/rs-to_radians.git"

[dependencies.to_primitive]
git = "https://github.com/nathanfaucett/rs-to_primitive.git"

[dependencies.from_primitive]
git = "https://github.com/nathanfaucett/rs-from_primitive.git"

[dependencies.max]
git = "https://github.com/nathanfaucett/rs-max.git"

[dependencies.min]
git = "https://github.com/nathanfaucett/rs-min.git"

[dependencies.one]
git = "https://github.com/nathanfaucett/rs-one.git"

[dependencies.pi]
git = "https://github.com/nathanfaucett/rs-pi.git"

[dependencies.round]
git = "https://github.com/nathanfaucett/rs-round.git"

[dependencies.signum]
git = "https://github.com/nathanfaucett/rs-signum.git"

[dependencies.sqrt]
git = "https://github.com/nathanfaucett/rs-sqrt.git"

[dependencies.trig]
git = "https://github.com/nathanfaucett/rs-trig.git"

[dependencies.zero]
git = "https://github.com/nathanfaucett/rs-zero.git"
