[package]
name = "num"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["num", "number", "float", "int"]
description = "generic number trait"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-num.git"
homepage = "https://github.com/nathanfaucett/rs-num"

[dependencies]
bounded = {git = "https://github.com/nathanfaucett/rs-bounded.git"}
to_primitive = {git = "https://github.com/nathanfaucett/rs-to_primitive.git"}
from_primitive = {git = "https://github.com/nathanfaucett/rs-from_primitive.git"}
one = {git = "https://github.com/nathanfaucett/rs-one.git"}
sqrt = {git = "https://github.com/nathanfaucett/rs-sqrt.git"}
trig = {git = "https://github.com/nathanfaucett/rs-trig.git"}
round = {git = "https://github.com/nathanfaucett/rs-round.git"}
zero = {git = "https://github.com/nathanfaucett/rs-zero.git"}
